--- a/Sprouts Project/secure pages/News
+++ b/Sprouts Project/secure pages/News
@@ -12,7 +12,7 @@
 
   gtag('config', 'UA-132846734-1');
 </script>
-<link rel="stylesheet" href="../css/style.css"
+<link rel="stylesheet" href="../css/style.css">
 <style>
 
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
